--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -32,6 +32,7 @@ jobs:
 
       - name: Send changes to GPT Code Critic
         run: |
+          echo "{{ inputs.OPENAI_API_KEY }}"
           package="{\"key\":\"${{ inputs.OPENAI_API_KEY }}\",\"files\":["
           while read -r file; do
             if [[ $(git diff HEAD $file | wc -l) -le 205 ]]; then
