--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -14,6 +14,13 @@ jobs:
         with:
           fetch-depth: 2
 
+      - name: Check if sarif already exists
+        run: |
+          if [[ -f results.sarif ]]; then
+            echo "Sarif file already exists."
+            exit 0
+          fi
+
       - name: Get Git changes
         run: |
           git fetch origin ${{ github.ref }}
