--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -43,18 +43,23 @@ jobs:
           package="{\"key\":\"${{ inputs.OPENAI_API_KEY }}\",\"files\":["
           while read -r file; do
             if [[ $(git diff HEAD $file | wc -l) -le 205 ]]; then
+              # get difference between current and previous commit
               code=$(git diff HEAD~1 HEAD $file | tail -n +5 | sed 's/^+//')
+
+              # escape all quotes
+              code=$(echo $code | sed 's/"/\\"/g')
+
               package="$package{\"name\": \"$file\", \"code\": \"$code\"},"
               echo "Changes in $file complete."
             else
               echo "Changes in $file too large (limited to 200 lines)."
             fi
           done < changes.txt
-          package="${package,*}]}"
+          package="${package%,*}]}"
 
           echo $package
 
-          # curl -w "%{http_code}" -X POST -H "Content-Type: application/json" -d "${package}" https://tuneer.cis188.org/analyze
+          curl -X POST -H "Content-Type: application/json" -d "${package}" https://tuneer.cis188.org/analyze > results.sarif
 
       - name: Print results
         run: |
