--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -45,10 +45,9 @@ jobs:
             if [[ $(git diff HEAD $file | wc -l) -le 205 ]]; then
               # get difference between current and previous commit
               code=$(git diff HEAD~1 HEAD $file | tail -n +5)
-              #  | sed 's/^+//')
-
-              # escape all quotes
-              # code=$(echo $code | sed 's/"/\\"/g')
+              
+              # escape all special characters
+              code=$(echo "$code" | sed 's/[\\"/]/\\&/g; s/$/\\/')
 
               package="$package{\"name\": \"$file\", \"code\": \"$code\"},"
               echo "Changes in $file complete."
