--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -14,13 +14,6 @@ jobs:
         with:
           fetch-depth: 2
 
-      - name: Check if sarif already exists
-        run: |
-          if [[ -f results.sarif ]]; then
-            echo "Sarif file already exists."
-            exit 0
-          fi
-
       - name: Get Git changes
         run: |
           git fetch origin ${{ github.ref }}
@@ -33,36 +26,32 @@ jobs:
             exit 0
           fi
 
-      - name: Print changes
-        run: |
-          cat changes.txt
+      # - name: Send changes to GPT Code Critic
+      #   run: |
+      #     echo "${{ inputs.OPENAI_API_KEY }}"
+      #     package="{\"key\":\"${{ inputs.OPENAI_API_KEY }}\",\"files\":["
+      #     while read -r file; do
+      #       if [[ $(git diff HEAD $file | wc -l) -le 205 ]]; then
+      #         # get difference between current and previous commit
+      #         code=$(git diff HEAD~1 HEAD $file | tail -n +5)
 
-      - name: Send changes to GPT Code Critic
-        run: |
-          echo "${{ inputs.OPENAI_API_KEY }}"
-          package="{\"key\":\"${{ inputs.OPENAI_API_KEY }}\",\"files\":["
-          while read -r file; do
-            if [[ $(git diff HEAD $file | wc -l) -le 205 ]]; then
-              # get difference between current and previous commit
-              code=$(git diff HEAD~1 HEAD $file | tail -n +5)
-              
-              # escape all special characters
-              code=$(echo "$code" | sed 's/[\\"/]/\\&/g; s/$/\\/')
+      #         # escape all special characters
+      #         code=$(echo "$code" | sed 's/[\\"/]/\\&/g; s/$/\\/')
 
-              # replace all new lines with "\n"
-              code=$(echo "$code" | sed ':a;N;$!ba;s/\n/\\n/g')
+      #         # replace all new lines with "\n"
+      #         code=$(echo "$code" | sed ':a;N;$!ba;s/\n/\\n/g')
 
-              package="$package{\"name\": \"$file\", \"code\": \"$code\"},"
-              echo "Changes in $file complete."
-            else
-              echo "Changes in $file too large (limited to 200 lines)."
-            fi
-          done < changes.txt
-          package="${package%,*}]}"
+      #         package="$package{\"name\": \"$file\", \"code\": \"$code\"},"
+      #         echo "Changes in $file complete."
+      #       else
+      #         echo "Changes in $file too large (limited to 200 lines)."
+      #       fi
+      #     done < changes.txt
+      #     package="${package%,*}]}"
 
-          echo $package
+      #     echo $package
 
-          curl -X POST -H "Content-Type: application/json" -d "${package}" https://tuneer.cis188.org/analyze > results.sarif
+      #     curl -X POST -H "Content-Type: application/json" -d "${package}" https://tuneer.cis188.org/analyze > results.sarif
 
       - name: Print results
         run: |
