--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -14,44 +14,22 @@ jobs:
         with:
           fetch-depth: 2
 
-      - name: Get Git changes
+      - name: Install dependencies
         run: |
-          git fetch origin ${{ github.ref }}
-          git diff --name-only --diff-filter=AM HEAD~1 HEAD > changes.txt
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
-      - name: Check if any changes
+      - name: Run GPT Code Critic
+        env:
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+        run: python3 main.py
+
+      - name: Check if results.sarif exists
         run: |
-          if ! [[ -s changes.txt ]]; then
-            echo "No changes found."
-            exit 0
+          if [ ! -f results.sarif ]; then
+            echo "::error::results.sarif not found"
+            exit 1
           fi
-
-      # - name: Send changes to GPT Code Critic
-      #   run: |
-      #     echo "${{ inputs.OPENAI_API_KEY }}"
-      #     package="{\"key\":\"${{ inputs.OPENAI_API_KEY }}\",\"files\":["
-      #     while read -r file; do
-      #       if [[ $(git diff HEAD $file | wc -l) -le 205 ]]; then
-      #         # get difference between current and previous commit
-      #         code=$(git diff HEAD~1 HEAD $file | tail -n +5)
-
-      #         # escape all special characters
-      #         code=$(echo "$code" | sed 's/[\\"/]/\\&/g; s/$/\\/')
-
-      #         # replace all new lines with "\n"
-      #         code=$(echo "$code" | sed ':a;N;$!ba;s/\n/\\n/g')
-
-      #         package="$package{\"name\": \"$file\", \"code\": \"$code\"},"
-      #         echo "Changes in $file complete."
-      #       else
-      #         echo "Changes in $file too large (limited to 200 lines)."
-      #       fi
-      #     done < changes.txt
-      #     package="${package%,*}]}"
-
-      #     echo $package
-
-      #     curl -X POST -H "Content-Type: application/json" -d "${package}" https://tuneer.cis188.org/analyze > results.sarif
 
       - name: Print results
         run: |
