--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -36,7 +36,6 @@ jobs:
           cat results.sarif
 
       - name: Upload results
-        # uses: github/codeql-action/upload-sarif@v2
-        uses: actions/upload-artifact@v3
+        uses: github/codeql-action/upload-sarif@v1
         with:
           sarif_file: results.sarif
