--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -8,34 +8,12 @@ jobs:
   analyze-code:
     name: Test action
     runs-on: ubuntu-latest
+    permissions: write-all
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
-        with:
-          fetch-depth: 2
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+        uses: actions/checkout@v3
 
       - name: Run GPT Code Critic
-        env:
-          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-        run: python3 main.py
-
-      - name: Check if results.sarif exists
-        run: |
-          if [ ! -f results.sarif ]; then
-            echo "::error::results.sarif not found"
-            exit 1
-          fi
-
-      - name: Print results
-        run: |
-          cat results.sarif
-
-      - name: Upload results
-        uses: github/codeql-action/upload-sarif@v1
+        uses: tuneerroy/gpt-code-critic-action@v1
         with:
-          sarif_file: results.sarif
+          openai_api_key: ${{ secrets.OPENAI_API_KEY }}
